--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>35-project</title>
-    <link rel="stylesheet" href="../35-project/styles/main.css">
+    <link rel="stylesheet" href="/35-project/styles/main.css">
 </head>
 
 <body>
     <header>
-        <img src="/29-project/styles/images/logo.png" width="40px" />
+        <img src="/35-project/styles/images/logo.png" width="40px" />
         <h3>نمایشگاه اجاره خودرو روزانه X</h3>
     </header>
     <main>
@@ -192,7 +192,7 @@
         </section>
     </main>
 
-    <script src="../35-project/styles/main.js"></script>
+    <script src="/35-project/styles/main.js"></script>
 </body>
 
 </html>
