--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <h3>بی ام دبلیو i8 مدل 2015</h3>
                     </div>
                     <div class="car_item_image">
-                        <img src="/styles/images/bmw-i8.jpeg" alt="bmw-i8">
+                        <img src="/35-project/styles/images/bmw-i8.jpeg" alt="bmw-i8">
                     </div>
                     <h4>اجاره خودرو روزانه 10,000,000 تومان</h4>
                 </a>
@@ -37,7 +37,7 @@
                         <h3>بی ام دبلیو X6 مدل 2012</h3>
                     </div>
                     <div class="car_item_image">
-                        <img src="styles/images/bmw-x6.jpeg" alt="bmw-x6">
+                        <img src="/35-project/styles/images/bmw-x6.jpeg" alt="bmw-x6">
                     </div>
                     <h4>اجاره خودرو روزانه 3,500,000 تومان</h4>
                 </a>
@@ -49,7 +49,7 @@
                         <h3>بی ام دبلیو 528 مدل 2013</h3>
                     </div>
                     <div class="car_item_image">
-                        <img src="styles/images/bmw-528.jpeg" alt="bmw-528">
+                        <img src="/35-project/styles/images/bmw-528.jpeg" alt="bmw-528">
                     </div>
                     <h4>اجاره خودرو روزانه 2,500,000 تومان</h4>
                 </a>
@@ -61,7 +61,7 @@
                         <h3>مرسدس بنز E350 مدل 2014</h3>
                     </div>
                     <div class="car_item_image">
-                        <img src="styles/images/benz-E350.jpeg" alt="benz-E350">
+                        <img src="/35-project/styles/images/benz-E350.jpeg" alt="benz-E350">
                     </div>
                     <h4>اجاره خودرو روزانه 2,600,000 تومان</h4>
                 </a>
@@ -73,7 +73,7 @@
                         <h3>تویوتا پرادو چهار درب مدل 2015</h3>
                     </div>
                     <div class="car_item_image">
-                        <img src="styles/images/prado-4X.jpeg" alt="prado-4X">
+                        <img src="/35-project/styles/images/prado-4X.jpeg" alt="prado-4X">
                     </div>
                     <h4>اجاره خودرو روزانه 3,000,000 تومان</h4>
                 </a>
@@ -85,7 +85,7 @@
                         <h3>پورشه 911 مدل 2012</h3>
                     </div>
                     <div class="car_item_image">
-                        <img src="styles/images/porsche-911.jpeg" alt="porsche-911">
+                        <img src="/35-project/styles/images/porsche-911.jpeg" alt="porsche-911">
                     </div>
                     <h4>اجاره خودرو روزانه 5,000,000 تومان</h4>
                 </a>
@@ -97,7 +97,7 @@
                         <h3>پورشه باکستر مدل 2014</h3>
                     </div>
                     <div class="car_item_image">
-                        <img src="styles/images/porsche-boxster.jpeg" alt="porsche-boxster">
+                        <img src="/35-project/styles/images/porsche-boxster.jpeg" alt="porsche-boxster">
                     </div>
                     <h4>اجاره خودرو روزانه 2,500,000 تومان</h4>
                 </a>
@@ -109,7 +109,7 @@
                         <h3>مرسدس بنز CLS مدل 2010</h3>
                     </div>
                     <div class="car_item_image">
-                        <img src="styles/images/benz-cls.jpeg" alt="benz-cls">
+                        <img src="/35-project/styles/images/benz-cls.jpeg" alt="benz-cls">
                     </div>
                     <h4>اجاره خودرو روزانه 2,600,000 تومان</h4>
                 </a>
